maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: not found: value getLargeurMonde
for (i <- 0 to getLargeurMonde) {
               ^JediEscaper:14: error: not found: value getLargeurMonde
	for (i <- 0 to getLargeurMonde) {
                       ^JediEscaper:22: error: not found: value xBaggle
var x = xBaggle
        ^JediEscaper:23: error: not found: value yBaggle
var y = yBaggle
        ^