maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {

for (i <- 0 to getLargeurMonde) {
	for (j <- 0 to getHauteurMonde) {
		if (aBiscuit(i,j)) {
			val xBaggle = i
			val yBaggle = j
		}
	}
}

def fini() :Boolean ={
	for (i <- 0 to getLargeurMonde) {
		for (j <- 0 to getHauteurMonde) {
			if (setIndication(i,j)==9999) return false
		}
	}
	return true
}
var indic = 0
var x = xBaggle
var y = yBaggle
while (!fini) {
	setIndication(x,y,indic)
	if (!aMurNord(x,y)) y -= 1
	else {
		if (!aMurOuest(x,y)) y += 1
		else y += 1
	}
	
}

}
